F&GDEV/src/objects/Product_Specification__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Account_Value_Structure__c</fullName>
        <label>Account Value Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Commission_Detail__c</fullName>
        <label>Additional Commission Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Premium_Limitations__c</fullName>
        <label>Additional Premium Limitations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Bonus_Included__c</fullName>
        <label>Annual Bonus Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Bonus_Inclusion_Details__c</fullName>
        <label>Annual Bonus Inclusion Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Bonus__c</fullName>
        <label>Annual Bonus</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annuitization_Amount__c</fullName>
        <label>Annuitization Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surrender Value</fullName>
                </value>
                <value>
                    <fullName>Account Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annuitization_Annuity_Types__c</fullName>
        <label>Annuitization Annuity Types</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Crediting_Mechanics__c</fullName>
        <label>Bonus Crediting Mechanics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Interest__c</fullName>
        <label>Bonus Interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COI__c</fullName>
        <label>COI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CVAT_Corridor_Factor__c</fullName>
        <label>CVAT Corridor Factor</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compact_States__c</fullName>
        <label>Compact States</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Income_Payment_SPIA__c</fullName>
        <label>Date of First Income Payment - SPIA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Death_Benefit__c</fullName>
        <label>Death Benefit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deductions_from_Account_Value__c</fullName>
        <label>Deductions from Account Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details_Version_Description__c</fullName>
        <label>Details Version Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dist Channel Brokerage</fullName>
                </value>
                <value>
                    <fullName>Dist Channel Broker Dealer</fullName>
                </value>
                <value>
                    <fullName>Dist Channel Bank</fullName>
                </value>
                <value>
                    <fullName>Dist Channel Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Face_Amount_Additional_Detail__c</fullName>
        <label>Face Amount Additional Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Sale_Date__c</fullName>
        <label>First Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Loans__c</fullName>
        <label>Fixed Loans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Free_Look_Period__c</fullName>
        <label>Free Look Period</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMDB_Charge_Basis__c</fullName>
        <label>GMDB Charge Basis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMDB_Charge__c</fullName>
        <label>GMDB Charge</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMDB_Description__c</fullName>
        <label>GMDB Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMDB_Name__c</fullName>
        <label>GMDB Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Accumulation_Period_Details__c</fullName>
        <label>GMWB Accumulation Period Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Charge_Basis__c</fullName>
        <label>GMWB Charge Basis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Charge__c</fullName>
        <label>GMWB Charge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Example__c</fullName>
        <label>GMWB Example</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Excess_Withdrawals__c</fullName>
        <label>GMWB Excess Withdrawals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Guaranteed_Withdrawal_Percentage__c</fullName>
        <label>GMWB Guaranteed Withdrawal Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Impairment_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMWB Impairment Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMWB_Included__c</fullName>
        <label>GMWB Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Inclusion_Detail__c</fullName>
        <label>GMWB Inclusion Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Income_Base_Initial_Rollup_Rate__c</fullName>
        <label>GMWB Income Base Initial Rollup Rate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Income_Base_Interest_Type__c</fullName>
        <label>GMWB Income Base - Interest Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Income_Base_Starting_Point__c</fullName>
        <label>GMWB Income Base - Starting Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Initial_Rollup_Period__c</fullName>
        <label>GMWB Initial Rollup Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Name__c</fullName>
        <label>GMWB Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMWB_Restart_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMWB Restart Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMWB_Restart_Detail__c</fullName>
        <label>GMWB Restart Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Restart_Max_Charge__c</fullName>
        <label>GMWB Restart Max Charge</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMWB_Restart_Min_Roll_Up_Rate__c</fullName>
        <label>GMWB Restart Min Roll-Up Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMWB_Spousal_Continuation__c</fullName>
        <label>GMWB Spousal Continuation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Step_up__c</fullName>
        <label>GMWB Step-up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Termination__c</fullName>
        <label>GMWB Termination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Withdrawal_Period_Details__c</fullName>
        <label>GMWB Withdrawal Period Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMWB_Withdrawal_Restrictions__c</fullName>
        <label>GMWB Withdrawal Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Annuity_Payments__c</fullName>
        <label>Guaranteed Annuity Payments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impairment_Feature_ADLs__c</fullName>
        <label>Impairment Feature ADLs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impairment_Feature_Description__c</fullName>
        <label>Impairment Feature Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impairment_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impairment Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Bonus_Meth__c</fullName>
        <label>Interest Rate Bonus Meth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Rate Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Age_Detail__c</fullName>
        <label>Issue Age Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Age_Type__c</fullName>
        <label>Issue Age Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age Last Birthday</fullName>
                </value>
                <value>
                    <fullName>Age Nearest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Age_Variations__c</fullName>
        <label>Issue Age Variations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Date__c</fullName>
        <label>Last Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Qualification_Test__c</fullName>
        <label>Life Insurance Qualification Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Limitations_on_Annuity_Types__c</fullName>
        <label>Limitations on Annuity Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Liquidity__c</fullName>
        <label>Liquidity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lite_Surrender_Charge_States__c</fullName>
        <label>Lite Surrender Charge States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NC, CT</fullName>
                </value>
                <value>
                    <fullName>OK, NC</fullName>
                </value>
                <value>
                    <fullName>AK, CT, DE, FL(65+), MA, NV, OH, OK, SC, TX, UT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGA_Override__c</fullName>
        <label>MGA Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGSV_Detail__c</fullName>
        <label>MGSV Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MGSV__c</fullName>
        <label>MGSV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100% @ 3% less surrender charges</fullName>
                </value>
                <value>
                    <fullName>100% of premium, growing at 3%</fullName>
                </value>
                <value>
                    <fullName>87.5% @ floating rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Value_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Value Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Age__c</fullName>
        <label>Maturity Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity_Detail__c</fullName>
        <label>Maturity Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Age_for_Face_Increase__c</fullName>
        <label>Max Age for Face Increase</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Annuitization_Age__c</fullName>
        <label>Max Annuitization Age</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Issue_Age_Non_Qualified__c</fullName>
        <label>Max Issue Age - Non-Qualified</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Issue_Age_Qualified__c</fullName>
        <label>Max Issue Age - Qualified</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Premium_Detail__c</fullName>
        <label>Max Premium Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Premium_w_o_Home_Office_Approva__c</fullName>
        <label>Max Premium w/o Home Office Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Premium_without_HOA__c</fullName>
        <label>Max Premium without HOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Variable_Loan_Rate__c</fullName>
        <label>Max Variable Loan Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Face_Amount__c</fullName>
        <label>Maximum Face Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Issue_Age_Non_Qualified__c</fullName>
        <label>Min Issue Age - Non-Qualified</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Issue_Age_Qualified__c</fullName>
        <label>Min Issue Age - Qualified</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Face_Amount_After_Issue__c</fullName>
        <label>Minimum Face Amount - After Issue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Face_Amount_At_Issue__c</fullName>
        <label>Minimum Face Amount - At Issue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Initial_Premium_Non_Qualified__c</fullName>
        <label>Minimum Initial Premium - Non-Qualified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Initial_Premium_Qualified__c</fullName>
        <label>Minimum Initial Premium - Qualified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Payout_Amount_SPIA__c</fullName>
        <label>Minimum Payout Amount - SPIA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Premium_Account_Value_Option__c</fullName>
        <inlineHelpText>Minimum Premium that can be allocated to each Account Value Option</inlineHelpText>
        <label>Minimum Premium - Account Value Option</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Policy_Charge__c</fullName>
        <label>Monthly Policy Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Amount_at_Risk__c</fullName>
        <label>Net Amount at Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Lapse_Guarantee_Basic__c</fullName>
        <label>No Lapse Guarantee - Basic</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Lapse_Guarantee_Detail__c</fullName>
        <label>No Lapse Guarantee Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optional_Benefits__c</fullName>
        <label>Optional Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WMD</fullName>
                </value>
                <value>
                    <fullName>ADB</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>UIR</fullName>
                </value>
                <value>
                    <fullName>PIT</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>VL</fullName>
                </value>
                <value>
                    <fullName>ADB-TI</fullName>
                </value>
                <value>
                    <fullName>PITLIR</fullName>
                </value>
                <value>
                    <fullName>STLIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_of_Operations__c</fullName>
        <label>Order of Operations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAIR_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAIR Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Index_Credit__c</fullName>
        <inlineHelpText>Partial Index Credit upon strategy surrender</inlineHelpText>
        <label>Partial Index Credit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partial_Index_Credit_at_Death__c</fullName>
        <label>Partial Index Credit at Death</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Load_Duration_Current__c</fullName>
        <label>Per Unit Load Duration - Current</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Unit_Load_Duration_Guaranteed__c</fullName>
        <label>Per Unit Load Duration - Guaranteed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Changes__c</fullName>
        <label>Policy Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Bonus_Included__c</fullName>
        <label>Premium Bonus Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_Bonus_Inclusion_Details__c</fullName>
        <label>Premium Bonus Inclusion Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Bonus__c</fullName>
        <label>Premium Bonus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Loads_Excess__c</fullName>
        <label>Premium Loads - Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Loads_Target__c</fullName>
        <label>Premium Loads - Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Taxes__c</fullName>
        <label>Premium Taxes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flexible</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance Pro</fullName>
                </value>
                <value>
                    <fullName>Synergy Global Advantage Gold</fullName>
                </value>
                <value>
                    <fullName>FG Immediate-Income</fullName>
                </value>
                <value>
                    <fullName>FG Life-Heritage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_SeriesX__c</fullName>
        <label>Product Series</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Hub Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Series_Description__c</fullName>
        <label>Product Series Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Series</label>
        <referenceTo>Product_Series__c</referenceTo>
        <relationshipName>Product_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Deferred Annuity</fullName>
                </value>
                <value>
                    <fullName>Fixed Indexed Deferred Annuity</fullName>
                </value>
                <value>
                    <fullName>Indexed Deferred Annuity</fullName>
                </value>
                <value>
                    <fullName>Indexed Universal Life</fullName>
                </value>
                <value>
                    <fullName>SPIA</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Compliance Filing Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Product_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_Options__c</fullName>
        <label>Qualified Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>TSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reallocation_of_Account_Values__c</fullName>
        <label>Reallocation of Account Values</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reinstatement__c</fullName>
        <label>Reinstatement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_of_Premium__c</fullName>
        <label>Return of Premium</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPIA_Accelerated_Benefit_Feature__c</fullName>
        <label>SPIA Accelerated Benefit Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPIA_Amount_and_Frequency_of_Payment__c</fullName>
        <label>SPIA Amount and Frequency of Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPIA_Load__c</fullName>
        <label>SPIA Load</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsequent_Premium__c</fullName>
        <label>Subsequent Premium</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surrender_Charge_Free_Partial_Withdrawal__c</fullName>
        <label>Surrender Charge Free Partial Withdrawal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Surrender_Charge_Period__c</fullName>
        <label>Surrender Charge Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surrender_Charges_Compact__c</fullName>
        <label>Surrender Charges -Compact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Surrender_Charges_Life__c</fullName>
        <label>Surrender Charges - Life</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surrender_Charges_Lite__c</fullName>
        <label>Surrender Charges - Lite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surrender_Charges_Standard__c</fullName>
        <label>Surrender Charges - Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surrender_Value__c</fullName>
        <label>Surrender Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <label>Termination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Underwriting_Detail__c</fullName>
        <label>Type of Underwriting Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Underwriting__c</fullName>
        <label>Type of Underwriting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underwriting_Classes__c</fullName>
        <label>Underwriting Classes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Non-tobacco</fullName>
                </value>
                <value>
                    <fullName>Non-tobacco</fullName>
                </value>
                <value>
                    <fullName>Preferred Tobacco</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Requirements__c</fullName>
        <label>Underwriting Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Variable_Loans__c</fullName>
        <label>Variable Loans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vesting_Bonus_Amount__c</fullName>
        <label>Vesting Bonus Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vesting_Bonus_Included__c</fullName>
        <label>Vesting Bonus Included</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vesting_Bonus_Inclusion_Details__c</fullName>
        <label>Vesting Bonus Inclusion Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vesting_Duration_years__c</fullName>
        <label>Vesting Duration (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vesting_Schedule__c</fullName>
        <label>Vesting Schedule</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_of_SC__c</fullName>
        <label>Waiver of SC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Terminal Illness</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Death of Owner</fullName>
                </value>
                <value>
                    <fullName>Home Health Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>GMWB_Restart_Min_Roll_Up_Rate__c</columns>
        <columns>GMWB_Restart_Max_Charge__c</columns>
        <columns>GMDB_Charge__c</columns>
        <columns>Annual_Bonus__c</columns>
        <columns>PAIR_Eligible__c</columns>
        <columns>First_Sale_Date__c</columns>
        <columns>Lite_Surrender_Charge_States__c</columns>
        <columns>Bonus_Interest__c</columns>
        <columns>Maturity_Detail__c</columns>
        <columns>No_Lapse_Guarantee_Basic__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Termination__c</columns>
        <columns>Vesting_Schedule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY,YESTERDAY</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>FIA</fullName>
        <active>true</active>
        <label>FIA</label>
    </recordTypes>
</CustomObject>